create header, modal and adaptive

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,5 +4,7 @@
 @import 'normalize'
 //Подключение базовых настроек
 @import 'settings'
-@import 'header'
+@import 'blocks/header'
+@import 'blocks/main'
+@import 'blocks/modal'
 @import 'media'
