--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -10,7 +10,7 @@
   &__tel
     display: flex
     align-items: center
-    font-family: 'Allan', serif
+    font-family: $allan
     font-style: normal
     font-weight: normal
     font-size: 20px
@@ -22,7 +22,7 @@
   &__list
     display: flex
     list-style: none
-    font-family: 'Comfortaa', serif
+    font-family: $comfortaa
     font-style: normal
     font-weight: normal
     font-size: 16px
