--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -9,3 +9,24 @@ img
   width: 100%
   height: 100%
   object-fit: cover
+
+.button
+  align-self: center
+  border-radius: 8px
+  border: 5px solid $green
+  padding: 20px 0
+  width: 345px
+  text-align: center
+  &__but
+    background-color: transparent
+    border: none
+    font-family: $comfortaa
+    font-style: normal
+    font-weight: normal
+    font-size: 20px
+    line-height: 22px
+
+    color: $light
+    cursor: pointer
+  &--mobile
+    display: none
