--- a/sass/_var.sass
+++ b/sass/_var.sass
@@ -1,5 +1,5 @@
 $light: #ffffff
 $green: #699B2C
 $gray: #48575E
-$comfortaa: 'Comfortaa', sans-serif
-$allan: 'Allan', sans-serif
+$comfortaa: 'Comfortaa', cursive
+$allan: 'Allan', cursive
