--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -11,22 +11,33 @@ img
   object-fit: cover
 
 .button
-  align-self: center
-  border-radius: 8px
-  border: 5px solid $green
-  padding: 20px 0
-  width: 345px
-  text-align: center
-  &__but
-    background-color: transparent
-    border: none
+  &-link
+    align-self: center
+    text-align: center
+    border-radius: 8px
+    border: 5px solid $green
+    text-decoration: none
     font-family: $comfortaa
     font-style: normal
     font-weight: normal
     font-size: 20px
     line-height: 22px
-
     color: $light
-    cursor: pointer
-  &--mobile
+    padding: 20px 29px
+  &-mobile
     display: none
+    align-self: center
+    border-radius: 8px
+    border: 5px solid $green
+    padding: 20px 0
+    width: 345px
+    text-align: center
+    background-color: transparent
+    font-family: $comfortaa
+    font-style: normal
+    font-weight: normal
+    font-size: 20px
+    line-height: 22px
+    color: $light
+    padding: 20px 0
+    cursor: pointer
