--- a/sass/blocks/_electric.sass
+++ b/sass/blocks/_electric.sass
@@ -2,7 +2,7 @@
   display: flex
   flex-direction: column
   background-color: $gray
-  padding: 80px 50px 47px 54px
+  padding: 80px 3% 47px 3%
   &__title
     align-self: center
     font-family: $allan
@@ -40,10 +40,11 @@
     border-radius: 8px
     overflow: hidden
     background-color: $light
-    margin-bottom: 173px
+    margin: 0 0 64px 0
     &-img
       width: 100%
-      height: 404px
+      min-height: 100%
+      max-height: 100%
       object-fit: cover
 .button-next
   position: absolute
