added adaptive for cleaning section

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,6 +4,8 @@
   .nav
     &__list
       margin: 0
+    &__item
+      margin-right: 66px
   .main
     &-wrapper
       padding: 0
@@ -27,9 +29,11 @@
   .header
     &__logo
       margin: 10px 17px
+    &__tel
+      font-size: 25px
   .nav
     &__item
-      margin-right: 40px
+      margin-right: 29px
   .main
     &__title
       font-size: 36px
@@ -49,6 +53,22 @@
       height: 500px
       &-img
         height: 500px
+  .cleaning
+    padding-top: 48px
+    padding-bottom: 40px
+    &__title
+      font-size: 35px
+      line-height: 40px
+      width: 155px
+    &__list
+      font-size: 20px
+      line-height: 20px
+      &--left
+        margin-right: 30px
+      &--right
+        margin-left: 30px
+    &-wrapper
+      margin-bottom: 15px
   .button
     &-link
       display: none
@@ -96,6 +116,18 @@
       height: 400px
       &-img
         height: 400px
+  .cleaning
+    &-wrapper
+      flex-direction: column
+      align-items: center
+    &__list
+      width: 100%
+      &--left
+        text-align: center
+        margin: 0
+      &--right
+        text-align: center
+        margin: 0
   .button
     &-mobile
       font-size: 16px
@@ -144,3 +176,13 @@
       line-height: 15px
     &__slider
       margin-bottom: 35px
+  .cleaning
+    padding: 35px 2% 40px 2%
+    &__title
+      font-size: 30px
+      line-height: 35px
+      width: 130px
+      margin-bottom: 30px
+    &__list
+      font-size: 13px
+      line-height: 15px
